--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server",
+    "build:dev": "",
+    "build:prod": "webpack -p --define process.env.NODE_ENV='\"production\"' --progress --colors",
     "test": "test"
   },
   "author": "Carles Vallve",
