Installed zingtouch through npm (not in use yet)

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "webfontloader": "^1.6.28",
     "webpack": "^4.29.5",
     "webpack-cli": "^3.2.3",
-    "webpack-dev-server": "^3.2.1"
+    "webpack-dev-server": "^3.2.1",
+    "zingtouch": "^1.0.6"
   }
 }
